// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiGovTransaction deposits 1`] = `
<litransaction-stub
  block="500"
  color="#15CFCC"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Deposited
      
    <b>
      1,000
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <div>
    
      On 
      
    <router-link-stub
      to="/proposals/1"
    >
      
        Proposal #1
      
    </router-link-stub>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</litransaction-stub>
`;

exports[`LiGovTransaction proposals 1`] = `
<litransaction-stub
  block="500"
  color="#15CFCC"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Submitted text proposal
      
    <b>
      1,000
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <div>
    
      Title: 
    <i>
      Test Proposal
    </i>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</litransaction-stub>
`;

exports[`LiGovTransaction votes 1`] = `
<litransaction-stub
  block="500"
  color="#15CFCC"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    Voted Yes
  </div>
   
  <div>
    
      On 
      
    <router-link-stub
      to="/proposals/1"
    >
      
        Proposal #1
      
    </router-link-stub>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</litransaction-stub>
`;
